--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -196,7 +196,8 @@
 
 #blogs {
   background-color: var(--secondary--color);
-  padding-top: 80px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   text-align: center;
 }
 
